Basic design for project, language and skill sections, less gap between divs

--- a/src/index.html
+++ b/src/index.html
@@ -40,19 +40,11 @@
       </nav>
     </div>
     <div class="row">
-      <div class="col-sm-3">
-          <div class="col-sm-12 text-center">
-            <strong><span class="text-center">10</span> lines</strong>
-          </div>
-          <div class="col-sm-12"><button class="btn btn-default btn-block">Code!</button></div>
+      <div class="col-sm-3 text-center">
+          <strong><span>10</span> lines</strong>
+          <button class="btn btn-default btn-block">Code!</button>
       </div>
-      <div class="col-sm-9">
-        <div class="row">
-          <div class="col-sm-12" ng-include="page">
-            include parts
-          </div>
-        </div>
-      </div>
+      <div class="col-sm-9" ng-include="page"></div>
     </div>
   </div>
 </body>
