--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
       </nav>
     </div>
     <div class="row">
-      <div class="col-sm-3 text-center">
+      <div class="col-sm-3 text-center half-margin-bottom">
           <strong><span>10</span> lines</strong>
           <button class="btn btn-default btn-block">Code!</button>
       </div>
