--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
   <script type="application/javascript" src="bower_components/angular/angular.js"></script>
   <script type="application/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script type="application/javascript" src="bower_components/ngStorage/ngStorage.js"></script>
+  <script type="application/javascript" src="assets/js/init.js"></script>
   <script type="application/javascript" src="assets/js/clickrammer.js"></script>
 </head>
 <body>
